# lexichron

./: .gitignore  CITATION.cff  PRINT_FORMATTING_PATTERNS.md  README.md  apptainer-build-399669.out  apptainer-build-399855.out  chrono_text_setup.py  environment.yml  pyproject.toml  setup.py  test_fixes.py
notebooks/: change_analysis_workflow.ipynb  coha_change_analysis_workflow.ipynb  coha_training_workflow.ipynb  davies_acquisition_workflow.ipynb  eng_multigrams_workflow.ipynb  eng_unigrams_workflow.ipynb  ngram_change_analysis_workflow.ipynb  ngram_training_workflow.ipynb  ngrams_change_analysis_workflow.ipynb  rus_multigrams_workflow.ipynb  rus_unigrams_workflow.ipynb  training_workflow.ipynb
src/analyze/: __init__.py  average_relatedness_by_year.py  cosine_similarity_time_series.py  dimension_projection_time_series.py  semantic_drift.py  weat_time_series.py
src/davieskit/: __init__.py
src/davieskit/davies_acquire/: __init__.py  core.py  encoding.py  reader.py  tokenizer.py  writer.py
src/davieskit/davies_filter/: __init__.py  config.py  core.py  whitelist.py
src/daviesprep/davies_acquire/: config.py  core.py  encoding.py  metadata.py  reader.py  writer.py
src/daviesprep/davies_filter/: __init__.py  config.py  core.py  whitelist.py
src/ngramkit/ngram_filter/: lemmatizer.py
src/ngramkit/ngram_pivot/: config.py  encoding.py
src/ngramkit/utilities/: peek.py
src/ngramprep/: __init__.py
src/ngramprep/common/: w2v_model.py
src/ngramprep/common_db/: ingest.py
src/ngramprep/ngram_acquire/: __init__.py  batch_writer.py  coordinator.py  core.py  (+3 more)
(+66 files in other folders)
